--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,14 @@
+# Git
+.git
+.gitignore
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -15,7 +20,6 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -23,7 +27,6 @@ wheels/
 # Virtual Environment
 venv/
 ENV/
-env/
 
 # IDE
 .idea/
@@ -36,5 +39,8 @@ dataset/*
 models/*
 !dataset/.gitkeep
 !models/.gitkeep
-*.yml
-*.txt 
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore 
